# agentcare

./: .env.example  README.md  auth.py  config.py  pyproject.toml  questions.md  streamlit_app.py  test.py
app/: main.py  utils.py
app/agents/: appointment.py  checkpointer.py  coordinator.py  document.py  followup.py  graph.py  prompts.py  routing.py  safety.py  state.py
app/api/routes/: staff.py
app/schemas/: schemas.py
app/services/: reminder_sender.py
app/services/supabase/: auth_ops.py  client.py  factory.py
app/services/supabase/db_ops/: insert.py  seed_doctors_slots.py
app/tools/: appointments.py  audit.py  departments.py  documents.py  escalations.py  notifications.py  patients.py  reminders.py  workflow.py
notebooks/: flow_demo.ipynb
supabase/: config.toml  seed.sql
supabase/migrations/: 20260719080308_create_profiles.sql  20260719085249_create_departments.sql  20260719092547_create_doctors.sql  20260719105441_create_appointment_slots.sql  20260719105604_create_patient_profiles.sql  20260719105605_create_appointments.sql  20260719105913_create_patient_documents.sql  20260719110838_create_workflow_runs.sql  20260719110840_create_reminders.sql  20260719110842_create_escalations.sql  20260719110844_create_audit_events.sql  20260719111755_create_staff_profiles.sql  20260721050641_create_patient_documents_bucket.sql  20260722061032_add_blocked_workflow_status.sql  20260723062833_add_workflow_run_id_to_audit_events.sql
