[project]
name = "agentcare"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "fastapi>=0.139.2",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.60.0",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.51.0",
]
